@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 15:08:56 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 15:32:51 +0800</lastBuildDate>
 <item>
   <title>K-pop 商品銷售商「罰款僅2,200美元」！立法者怒轟：太輕了，讓粉絲淪為「搖錢樹」</title>
   <link>https://www.famechos.me/news/K-pop 商品銷售商「罰款僅2,200美元」！立法者怒轟：太輕了，讓粉絲淪為「搖錢樹」.html</link>
@@ -30,5 +30,11 @@
   <description>K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波</description>
   <category>K-Pop</category>
   <pubDate>Fri, 11 Oct 2024 15:08:56 +0800</pubDate>
+</item><item>
+  <title>K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波</title>
+  <link>https://www.famechos.me/news/K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波.html</link>
+  <description>K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 15:32:51 +0800</pubDate>
 </item></channel>
 </rss>
