@@ -1,0 +1,256 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u777d\u9055\u5341\u5e74\uff012NE1\u91cd\u805a\u6f14\u5531\u6703\u71c3\u7206\u5967\u6797\u5339\u514b\u5ef3\u3000\u4e9e\u6d32\u5de1\u6f14\u5373\u5c07\u5c55\u958b", "description": "\u777d\u9055\u5341\u5e74\uff012NE1\u91cd\u805a\u6f14\u5531\u6703\u71c3\u7206\u5967\u6797\u5339\u514b\u5ef3\u3000\u4e9e\u6d32\u5de1\u6f14\u5373\u5c07\u5c55\u958b", "url": "https://www.famechos.me/news/\u777d\u9055\u5341\u5e74\uff012NE1\u91cd\u805a\u6f14\u5531\u6703\u71c3\u7206\u5967\u6797\u5339\u514b\u5ef3\u3000\u4e9e\u6d32\u5de1\u6f14\u5373\u5c07\u5c55\u958b.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T15:32:44.512090+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/睽違十年！2NE1重聚演唱會燃爆奧林匹克廳　亞洲巡演即將展開.html"/>
+<meta name="description" content="睽違十年！2NE1重聚演唱會燃爆奧林匹克廳，亞洲巡演即將展開。重溫經典歌曲，感受音樂的熱情！">
+<meta name="keywords" content="2NE1, 重聚演唱會, 奧林匹克廳, 亞洲巡演, KPOP, 韓國流行音樂">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/睽違十年！2NE1重聚演唱會燃爆奧林匹克廳　亞洲巡演即將展開.html" />
+        <meta property="og:title" content="睽違十年！2NE1重聚演唱會燃爆奧林匹克廳　亞洲巡演即將展開" />
+        <meta property="og:description" content="睽違十年！2NE1重聚演唱會燃爆奧林匹克廳　亞洲巡演即將展開" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="睽違十年！2NE1重聚演唱會燃爆奧林匹克廳　亞洲巡演即將展開" />
+        <meta property="twitter:description" content="睽違十年！2NE1重聚演唱會燃爆奧林匹克廳　亞洲巡演即將展開" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>睽違十年！2NE1重聚演唱會燃爆奧林匹克廳　亞洲巡演即將展開</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>周日晚上，首爾奧林匹克公園的奧林匹克廳（Olympic Hall）響起了“Come Back Home”的熟悉旋律，標誌著韓國偶像女團2NE1睽違十多年的重聚演唱會正式開始。四位成員朴山達拉、李彩麟、朴春和孔旻智一同登台，引爆了現場粉絲的熱情歡呼。</p>
+<p>2NE1以觀眾席上爆發出激動的歡呼聲，大家跟著音樂舞動和歌唱，成員們則穿過人群，與粉絲近距離互動。</p>
+<p>對於2NE1來說，這個場地很特別，因為他們在這裡舉行了第一場演唱會。成員朴山達拉表示，能夠一起慶祝15週年也很特別。</p>
+<p>朴春補充道，他們非常感謝大家在準備這場演唱會期間給予的愛和支持。能夠終於為大家表演，他們感到非常高興。</p>
+<p>朴山達拉繼續說，他知道大家等待的時間很長，但謝謝大家的耐心。十年後第一次見面，帶回了美好的回憶。</p>
+<p>李彩麟表示，他們希望通過這場演唱會喚起大家的懷舊感，展現經典的2NE1演唱會樣貌。他們感受到大家的正能量，希望大家也感受到了。</p>
+<h2>亞洲巡演即將啟動：2NE1（韩语：투애니원）</h2>
+<p>朴山達拉透露未來計劃，表示最初只計劃舉辦一場音樂會，但門票銷售速度太快，因此又增加了兩場。難道不應該考慮再舉辦一場安可音樂會嗎？我們將嘗試預訂一個更大的場地舉辦！</p>
+<p>2NE1（韩语：투애니원）現在準備在亞洲展開巡演，計劃在九個城市舉辦15場音樂會，首場音樂會將於11月16日在馬尼拉舉行。</p>
+
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VVzk3WZDewk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： Korea Herald</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop 商品銷售商「罰款僅2,200美元」！立法者怒轟：太輕了，讓粉絲淪為「搖錢樹」.html">K-pop 商品銷售商「罰款僅2,200美元」！立法者怒轟：太輕了，讓粉絲淪為「搖錢樹」</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波.html">K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
