@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 15:08:56 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 15:32:51 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -42,5 +42,11 @@
   <description>K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波</description>
   <category>K-Pop</category>
   <pubDate>Fri, 11 Oct 2024 15:08:56 +0800</pubDate>
+</item><item>
+  <title>K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波</title>
+  <link>https://www.famechos.me/news/K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波.html</link>
+  <description>K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 15:32:51 +0800</pubDate>
 </item></channel>
 </rss>
