@@ -186,4 +186,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-POP大爆炸：aespa、NCT Yuta、SF9 Taeyang新歌齊發，河成雲OST抄襲風波.html</ns0:loc>
+    <ns0:lastmod>2024-10-11T15:32:51+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
