@@ -1,2 +1,3 @@
 
 https://www.koreaherald.com/view.php?ud=20241008050463
+https://www.koreaherald.com/view.php?ud=20241002050690
